<resources>
    <string name="app_name">Qizil Kitap</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">O`zbekistan Respublikasi Qizil Kitabi</string>
    <string name="nav_header_subtitle">(o`zbek tilinde) </string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="tv_status">Status</string>
    <string name="tv_propagation">Propagation</string>
    <string name="tv_habitat">Habitat</string>
    <string name="tv_quantity">Quantity</string>
    <string name="tv_lifestyle">Lifestyle</string>
    <string name="tv_limiting_factors">Limiting Factors</string>
    <string name="tv_breeding">Breeding</string>
    <string name="tv_security">Security</string>
    <string name="bookmark">bookmark</string>
    <string name="omirtqasizlar">Omirtqasizlar</string>
    <string name="baliqlar">Baliqlar</string>
    <string name="jer_bawirlawshilar">Jer bawirlawshilar</string>
    <string name="quslar">Quslar</string>
    <string name="su_t_emiziwshiler">Su`t emiziwshiler</string>
    <string name="saylandilar">Saylandilar</string>
</resources>
