<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_invertebrates"
            android:title="@string/omirtqasizlar" />
        <item
            android:id="@+id/nav_fishes"
            android:title="@string/baliqlar" />
        <item
            android:id="@+id/nav_reptiles"
            android:title="@string/jer_bawirlawshilar" />
        <item
            android:id="@+id/nav_birds"
            android:title="@string/quslar" />
        <item
            android:id="@+id/nav_mammals"
            android:title="@string/su_t_emiziwshiler" />
        <item
            android:id="@+id/nav_favourite"
            android:title="@string/saylandilar" />
    </group>
</menu>
